--- a/app/app.development.html
+++ b/app/app.development.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
     <title>Qri Desktop</title>
+    <meta charset='utf-8'>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:2503 https://qri.io https://qri.cloud">
     <link rel='stylesheet' href='http://localhost:1212/dist/bundle.css' />
   <body>
     <div id='root'></div>
