test(onboarding e2e): add initial onboarding end-2-end test
This lays out a bunch of key techniques for for working with spectron, while landing our first user-story-driven spectron test:
* spin up a new mock backend with a mock registry server attached
* use spectron to launch desktop with programmatic control
* accept terms by hitting enter
* create a new, valid account, hit enter
* add a mock data csv to the filesystem
* create a new dataset using the create dataset modal
* create an initial commit
* close the window
* cleanup the mock backend, removing all files created

techniques outlined:
* spinning up a temp backend without any setup & a mock registry
* filling in form fields
* wiring up id tags in production code for easier, semantic testing
* mocking file picking with spectron-fake-dialog
* examining router state

--- a/app/app.development.html
+++ b/app/app.development.html
@@ -3,7 +3,7 @@
   <head>
     <title>Qri Desktop</title>
     <meta charset='utf-8'>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:2503 https://qri.io https://qri.cloud">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:1212 http://localhost:2503 https://qri.io https://qri.cloud">
     <link rel='stylesheet' href='http://localhost:1212/dist/bundle.css' />
   <body>
     <div id='root'></div>
