fix(windows): Fix some things for Windows and production build
On windows, need to add a guard on menu interaction, otherwise the user can't close the app at all. For production, depend on the proper css bundle.

--- a/app/app.production.html
+++ b/app/app.production.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>Qri Desktop</title>
-    <link rel='stylesheet' href='./dist/bundle.css' />
+    <link rel='stylesheet' href='./dist/main.bundle.css' />
   <body>
     <div id='root'></div>
     <script type='text/javascript' src='./dist/bundle.js'></script>
