refactor: v0.3.0 user interface update

--- a/app/app.development.html
+++ b/app/app.development.html
@@ -3,9 +3,9 @@
   <head>
     <title>Qri Desktop</title>
     <meta charset='utf-8'>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:1212 http://localhost:2503 https://qri.io https://qri.cloud">
     <link rel='stylesheet' href='http://localhost:1212/dist/bundle.css' />
   <body>
+    <div class='titlebar'></div>
     <div id='root'></div>
     <script type='text/javascript' src='http://localhost:1212/dist/bundle.js'></script>
   </body>
