--- a/app/app.production.html
+++ b/app/app.production.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:2503 https://qri.io https://qri.cloud">
     <link rel='stylesheet' href='./dist/bundle.css' />
   <body>
+    <div class='titlebar'></div>
     <div id='root'></div>
     <script type='text/javascript' src='./dist/bundle.js'></script>
   </body>
