--- a/app/webapp/index.html
+++ b/app/webapp/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Qri Remote Webapp</title>
     <meta charset='utf-8'>
-    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:2503 https://qri.io https://qri.cloud"> -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:2503 https://qri.io https://qri.cloud">
   <body>
     <div class='titlebar'></div>
     <div id='root'></div>
