fix(favicon): add favicon option to `webpack.config.base`
Use the wonderful `HtmlWebpackPlugin` add favicon html to our base index.html file as well as make sure that the icon is being served.

--- a/app/webapp/index.html
+++ b/app/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Qri Webapp</title>
+    <title>Qri Webui</title>
     <meta charset='utf-8'>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:2503 https://qri.io https://qri.cloud">
   <body>
