--- a/app/webapp/index.html
+++ b/app/webapp/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Qri Webui</title>
     <meta charset='utf-8'>
+    <link  rel='icon' type='image/png' href='/favicon.ico'/>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:2503 https://qri.io https://qri.cloud">
   <body>
     <div class='titlebar'></div>
